<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_summary"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recents"
            android:icon="@drawable/ic_phone"
            android:title="@string/menu_recents" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_people"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_divider"
            android:title=""
            android:enabled="false"
            android:icon="@null"
            android:checkable="false" />

    </group>
    <item
        android:title="" >
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>
