<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dotcall_android.ui.summary.SummaryFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.dotcall_android.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_recents"
        android:name="com.example.dotcall_android.ui.recent.RecentFragment"
        android:label="@string/menu_recents"
        tools:layout="@layout/fragment_recents" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.dotcall_android.ui.contacts.ContactFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contact" />
</navigation>