<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LaunchScreen">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_conversation"
        android:textAlignment="center"
        android:textColor="@color/linkText"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:lineHeight="45sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anywhere"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:lineHeight="45sp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/experince_the"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launchImage"
        app:lineHeight="45sp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="355dp"
        android:layout_height="58dp"
        android:layout_gravity="start"
        android:layout_marginBottom="55dp"
        android:backgroundTint="@color/themeIcon"
        android:clickable="true"
        android:onClick="login"
        android:text="@string/action_log_in"
        android:textSize="22sp"
        app:cornerRadius="18dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="355dp"
        android:layout_height="58dp"
        android:layout_gravity="start"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/launchLight"
        android:clickable="true"
        android:hapticFeedbackEnabled="true"
        android:onClick="createAccount"
        android:text="@string/action_create"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/launchImage"
        android:layout_width="315dp"
        android:layout_height="314dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/launchcontent"
        tools:ignore="MissingClass,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="280dp"
        android:layout_height="95dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dotcall" />

</androidx.constraintlayout.widget.ConstraintLayout>