<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0dp">

    <!-- Main layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="#FEFFFF"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/profile" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="6dp"
                android:text="@string/summary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/bgColorDark"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/summary_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/detail_summary"
                android:textColor="@color/buttonDark"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/summary_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/time"
            android:textColor="@color/launchDark"
            android:textSize="13sp" />
    </LinearLayout>

    <!-- Bottom border view -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e6e6e6" /> <!-- Adjust the color as needed -->

</LinearLayout>
